Versión de la clase 6

--- a/productos-servicios.html
+++ b/productos-servicios.html
@@ -26,7 +26,24 @@
     <main>
         <section>
             <h2>Productos o Servicios</h2>
-            
+            <div>
+                <h3>FrontEnd</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus, neque.</p>
+                <p>Martes a las 18</p>
+                <p>Duracion 12 clases</p>
+            </div>
+            <div>
+                <h3>HSE</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus, neque.</p>
+                <p>Viernes a las 18</p>
+                <p>Duracion 10 clases</p>
+            </div>
+            <div>
+                <h3>Ingles</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus, neque.</p>
+                <p>Jueves a las 18</p>
+                <p>Duracion 6 clases</p>
+            </div>
         </section>
     </main>
 
