--- a/prueba.html
+++ b/prueba.html
@@ -5,8 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pruebas</title>
+    <style>
+        * {
+            padding: 0;
+            margin: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            background-color: green;
+        }
+
+        @media (max-width:992px) {
+            body {
+                background-color: orange;
+            }
+        }
+
+    </style>
 </head>
 <body>
-    <div>Contenido texto o elementos anidados</div>
+    
 </body>
 </html>
