--- a/productos-servicios.html
+++ b/productos-servicios.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Proyecto | Productos o Servicios</title>
+    <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
@@ -24,26 +25,79 @@
     </header>
 
     <main>
+        <section class="seccion-cursos">
+            <div class="container-fluid">
+                <h2>Productos o Servicios</h2>
+                <div class="row">
+                    <div class="col-12 col-md-4">
+                        <div>
+                            <h3>FrontEnd</h3>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus, neque.</p>
+                            <p>Martes a las 18</p>
+                            <p>Duracion 12 clases</p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <div>
+                            <h3>HSE</h3>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus, neque.</p>
+                            <p>Viernes a las 18</p>
+                            <p>Duracion 10 clases</p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <div>
+                            <h3>Ingles</h3>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus, neque.</p>
+                            <p>Jueves a las 18</p>
+                            <p>Duracion 6 clases</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <section>
-            <h2>Productos o Servicios</h2>
-            <div>
-                <h3>FrontEnd</h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus, neque.</p>
-                <p>Martes a las 18</p>
-                <p>Duracion 12 clases</p>
-            </div>
-            <div>
-                <h3>HSE</h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus, neque.</p>
-                <p>Viernes a las 18</p>
-                <p>Duracion 10 clases</p>
-            </div>
-            <div>
-                <h3>Ingles</h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus, neque.</p>
-                <p>Jueves a las 18</p>
-                <p>Duracion 6 clases</p>
-            </div>
+            <h2>Galeria</h2>
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="imagenes/foto-1.jpg" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="imagenes/foto-2.jpg" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="imagenes/foto-3.jpg" class="d-block w-100" alt="...">
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+        </section>
+        
+        <section>
+            <div class="px-4 pt-5 my-5 text-center border-bottom">
+                <h1 class="display-4 fw-bold">Centered screenshot</h1>
+                <div class="col-lg-6 mx-auto">
+                  <p class="lead mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
+                  <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
+                    <button type="button" class="btn btn-primary btn-lg px-4 me-sm-3">Primary button</button>
+                    <button type="button" class="btn btn-outline-secondary btn-lg px-4">Secondary</button>
+                  </div>
+                </div>
+                <div class="overflow-hidden" style="max-height: 30vh;">
+                  <div class="container px-5">
+                    <img src="imagenes/img-banner-1.svg" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example image" width="700" height="500" loading="lazy">
+                  </div>
+                </div>
+              </div>
         </section>
     </main>
 
@@ -56,5 +110,7 @@
         </div>
         <p>Derechos reservados 2021 - Potrero Digital</p>
     </footer>
+
+    <script src="js/bootstrap.bundle.js"></script>
 </body>
 </html>
